<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/firstTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/firstString" />

    <TextView
        android:id="@+id/secondTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/firstTextView"
        android:layout_below="@+id/firstTextView"
        android:layout_marginTop="22dp"
        android:text="@string/secondString" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/secondTextView"
        android:layout_alignRight="@+id/firstTextView"
        android:layout_below="@+id/secondTextView"
        android:layout_marginTop="23dp"
        android:text="@string/emailString" />

    <EditText
        android:id="@+id/firstEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/firstTextView"
        android:layout_alignBottom="@+id/firstTextView"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/firstTextView"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/secondEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/secondTextView"
        android:layout_alignBottom="@+id/secondTextView"
        android:layout_alignLeft="@+id/firstEditText"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/emailTextView"
        android:layout_alignBottom="@+id/emailTextView"
        android:layout_alignLeft="@+id/secondEditText"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailTextView"
        android:layout_below="@+id/emailEditText"
        android:layout_marginTop="16dp"
        android:layout_toLeftOf="@+id/deleteButton"
        android:onClick="addData"
        android:text="@string/addstring" />

    <Button
        android:id="@+id/showButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addButton"
        android:layout_alignRight="@+id/addButton"
        android:layout_below="@+id/addButton"
        android:onClick="showTable"
        android:text="@string/show" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/showButton"
        android:layout_alignLeft="@+id/emailEditText"
        android:layout_alignRight="@+id/emailEditText"
        android:layout_alignTop="@+id/addButton"
        android:onClick="deleteNow"
        android:text="@string/deletestriing" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/showButton"
        android:layout_alignLeft="@+id/deleteButton"
        android:layout_alignRight="@+id/deleteButton"
        android:layout_alignTop="@+id/showButton"
        android:onClick="reset"
        android:text="@string/resetString" />

</RelativeLayout>
